# python-poetry-on-nixos

./: .gitignore  README.org  flake.nix  pyproject.toml  shell.nix
nix_poetry_example/: __init__.py  cli.py
tests/: test_example.py
